[metadata]
name = gerrit-dashboard-nfv
summary = Gerrit automated dashboard for NFV subteam.
description-file =
    README.rst
author = Sylvain Bauza
author-email = sbauza@redhat.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    scrapnfving

[entry_points]
console_scripts =
    nfvscraper=scrapnfving.cmd:main

scrapnfving.utils.shorteningservice =
    tiny_cc=scrapnfving.utils.shorteningservice.tiny_cc:TinyCCPlugin
    local_file=scrapnfving.utils.shorteningservice.local:LocalFilePlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = scrapnfving/locale
domain = gerrit-dashboard-nfv

[update_catalog]
domain = gerrit-dashboard-nfv
output_dir = scrapnfving/locale
input_file = scrapnfving/locale/gerrit-dashboard-nfv.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = scrapnfving/locale/gerrit-dashboard-nfv.pot